figuring out layouts, updating footer styling and colors

--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -62,7 +62,7 @@ body
   left: 0
   transition: 0.2s ease-out
   z-index: 1
-  background: color-background
+  background: color-med
   .mobile-nav-on &
     left: mobile-nav-width
 
@@ -84,6 +84,7 @@ if sidebar is left
 @import "_partial/footer"
 @import "_partial/highlight"
 @import "_partial/mobile"
+@import "_partial/home"
 
 if sidebar
   @import "_partial/sidebar"
