--- a/themes/landscape/source/css/_partial/footer.styl
+++ b/themes/landscape/source/css/_partial/footer.styl
@@ -1,13 +1,15 @@
 #footer
-  background: color-footer-background
-  padding: 50px 0
-  border-top: 1px solid color-border
-  color: color-grey
+  position: fixed
+  bottom: 0
+  left: 0
+  width: 100%
+  background: color-darkest
+  padding: 25px 0
+  color: color-lightest
+  text-align: center;
   a
-    color: color-link
+    color: color-lightest
     text-decoration: none
-    &:hover
-      text-decoration: underline
 
 #footer-info
   line-height: line-height
