--- a/themes/landscape/source/css/_partial/footer.styl
+++ b/themes/landscape/source/css/_partial/footer.styl
@@ -14,3 +14,33 @@
 #footer-info
   line-height: line-height
   font-size: 0.85em
+
+.footer-social
+  font-family: font-icon
+  font-size: 1.7em
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+  font-weight: 200
+
+.footer-icon
+  margin: 0 3px
+
+#footer-linkedin-link
+  &:before
+    content: "\f08c"
+
+#footer-twitter-link
+  &:before
+    content: "\f081"
+
+#footer-insta-link
+  &:before
+    content: "\f16d"
+
+#footer-github-link
+  &:before
+    content: "\f09b"
+
+.footer-email
+  font: 1.5em font-serif
+  margin: 5px 0
