--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -5,14 +5,12 @@ vendor-prefixes = webkit moz ms official
 // Colors
 color-darkest = #0E2431;
 color-med = #FC3A52;
+color-light = #F9B428;
 color-lightest = #E8D587;
 
 // Fonts
-font-sans = -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif
-font-serif = Georgia, "Times New Roman", serif
+font-sans = 'PT Sans', sans-serif
+font-serif = 'VT323', "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
