--- a/themes/landscape/source/css/_partial/footer.styl
+++ b/themes/landscape/source/css/_partial/footer.styl
@@ -4,16 +4,16 @@
   left: 0
   width: 100%
   background: color-darkest
-  padding: 25px 0
+  padding: 15px 0
   color: color-lightest
   text-align: center;
   a
-    color: color-lightest
+    color: color-light
     text-decoration: none
 
 #footer-info
-  line-height: line-height
-  font-size: 0.85em
+  line-height: 1
+  font-size: 0.8em
 
 .footer-social
   font-family: font-icon
