created Now page, preparing to create Now category of posts

--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -4,7 +4,7 @@ vendor-prefixes = webkit moz ms official
 
 // Colors
 color-darkest = #0E2431;
-color-med = #FC3A52;
+color-med = #eb2c44;
 color-light = #F9B428;
 color-lightest = #E8D587;
 
