--- a/themes/landscape/layout/_partial/home.ejs
+++ b/themes/landscape/layout/_partial/home.ejs
@@ -1,1 +1,8 @@
-Hi this is the home page.
+<div class="page-header">
+    <div class="page-header-container">
+        <h1><%= title %></h1>
+
+        <p>
+        </p>
+    </div>
+</div>
