--- a/themes/landscape/layout/index.ejs
+++ b/themes/landscape/layout/index.ejs
@@ -1,3 +1,1 @@
-<%- partial('_partial/home') %>
-
-<%- partial('_partial/archive', {pagination: 2, index: true}) %>
+<%- partial('_partial/home', {title: 'IDK this is the home page'}) %>
