--- a/themes/landscape/layout/layout.ejs
+++ b/themes/landscape/layout/layout.ejs
@@ -3,18 +3,12 @@
   <%- partial('_partial/nav', {}, {cache: true}) %>
 
   <div id="container">
-    <div id="wrap">
-      <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
-      <div class="outer">
-        <section id="main"><%- body %></section>
-      </div>
+    <section id="main"><%- body %></section>
+  </div>
 
-      <div id="footer-margin"></div>
-      <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
+  <%- partial('_partial/footer', null, {cache: true}) %>
 
-    </div>
-
-    <%- partial('_partial/after-footer') %>
+  <%- partial('_partial/after-footer') %>
   </div>
 </body>
 </html>
