--- a/themes/landscape/layout/page.ejs
+++ b/themes/landscape/layout/page.ejs
@@ -1,1 +1,12 @@
+<div class="page-header">
+    <div class="page-header-container">
+    <h1><%= page.title %></h1>
+
+    <% if (page.intro) { %>
+        <p class="page-header-intro">
+            <%- page.intro %>
+        </p>
+    <% } %>
+</div>
+
 <%- partial('_partial/article', {post: page, index: false}) %>
