... now page has content, but home page currently broken

--- a/themes/landscape/layout/_partial/home.ejs
+++ b/themes/landscape/layout/_partial/home.ejs
@@ -1,8 +1,1 @@
-<div class="page-header">
-    <div class="page-header-container">
-        <h1><%= title %></h1>
-
-        <p>
-        </p>
-    </div>
-</div>
+<%- partial('_partial/page-header', {post: page, index: true}) %>
