--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -1,15 +1,20 @@
 .page-header
     padding: 15px 0
+    margin-bottom: 25px
 
-    h1 
+    h1
+        font: 3em font-serif
+    h2 
         font: 2em font-serif
+        background: color-light
+        padding: 0 5px
+    p
+        margin: 5px 0
     background: color-lightest
     color: color-darkest
     a
         color: color-med
-    
-    .page-header-intro
-        margin-top: 15px
+
     
     .page-header-container
         width: 90%
