--- a/themes/darzouras/layout/_partial/archive.ejs
+++ b/themes/darzouras/layout/_partial/archive.ejs
@@ -1,7 +1,9 @@
 <% if (pagination == 2){ %>
-  <% page.posts.each(function(post){ %>
+
+  <% page.posts.sort('date', -1).each(function(post){ %>
     <%- partial('article', {post: post, index: true}) %>
   <% }) %>
+
 <% } else { %>
   <% var last; %>
   <% page.posts.each(function(post, i){ %>
@@ -23,6 +25,7 @@
     </div></section>
   <% } %>
 <% } %>
+
 <% if (page.total > 1){ %>
   <nav id="page-nav">
     <% var prev_text = "&laquo; " + __('prev');var next_text = __('next') + " &raquo;"%>
