--- a/themes/darzouras/source/css/_partial/home.styl
+++ b/themes/darzouras/source/css/_partial/home.styl
@@ -1,3 +1,6 @@
+.home-header-container
+    text-align: center
+
 .home-header-icon
     width: 100px
     height: 100px
@@ -11,6 +14,7 @@
         flex-wrap: nowrap
         aling-items: center;
         justify-content: center;
+        text-align: left
 
     .home-header-title
         margin-left: 15px
