--- a/themes/darzouras/layout/_partial/post/category.ejs
+++ b/themes/darzouras/layout/_partial/post/category.ejs
@@ -3,8 +3,7 @@
     <%- list_categories(post.categories, {
       show_count: false,
       class: 'article-category',
-      style: 'none',
-      separator: '►'
+      style: 'none'
     }) %>
   </div>
 <% } %>
