fixed some home page styling

--- a/themes/darzouras/source/css/_partial/home.styl
+++ b/themes/darzouras/source/css/_partial/home.styl
@@ -12,10 +12,14 @@
     .home-header-container
         display: flex
         flex-wrap: nowrap
-        aling-items: center;
-        justify-content: center;
+        aling-items: center
         text-align: left
 
     .home-header-title
         margin-left: 15px
+        display: flex
+        align-items: center
+    
+    .home-header-icon
+        justify-self: flex-start
 
