--- a/themes/darzouras/layout/index.ejs
+++ b/themes/darzouras/layout/index.ejs
@@ -1,3 +1,3 @@
-<%- partial('_partial/home', {title: 'IDK this is the home page'}) %>
+<%- partial('_partial/home', {title: 'DarZouras.Github.io'}) %>
 
 <%- partial('_partial/archive', {pagination: 2, order: -1, index: true}) %>
