some content and style updates, also deploy info added

--- a/themes/darzouras/layout/_partial/nav.ejs
+++ b/themes/darzouras/layout/_partial/nav.ejs
@@ -7,6 +7,6 @@
         <% } %>
     </div>
     <div class="nav-selection" id="nav-show">
-        <div class="nav-link"><%= config.title %></div> <i class="nav-icon" id="nav-expand"></i></div>
+        <div class="nav-link">MORE</div> <i class="nav-icon" id="nav-expand"></i></div>
     </div>
 </div>
