--- a/themes/darzouras/source/css/style.styl
+++ b/themes/darzouras/source/css/style.styl
@@ -51,10 +51,7 @@ body
 #container
   position: relative
   margin-top: 50px
-  margin-bottom: 115px
-
-.mobile-nav-on
-  overflow: hidden
+  padding-bottom: 150px
 
 @import "_extend"
 @import "_partial/header"
@@ -69,6 +66,3 @@ body
 
 if sidebar
   @import "_partial/sidebar"
-
-#main
-  margin-bottom: 150px
