idk text updates

--- a/themes/darzouras/layout/_partial/home.ejs
+++ b/themes/darzouras/layout/_partial/home.ejs
@@ -7,7 +7,7 @@
 
 <div class="page-header">
     <div class="page-header-container">
-        <p>Hi! I'm Darlene, a front end developer and artist. I'm also a pescatarian, a feminist, and a cancer.</p>
+        <p>Hi! I'm Darlene, a front end developer and artist. My dream is to become a Pokemon master.</p>
         <p>I started building websites on Geocities in the early 2000s, continued to dabble in simple web development through middle school (... mostly Sailor Moon fan sites), then as a teenager never considered that it could be a career. I got my first degree in studio art, then my master's degree in art education, and then found myself making websites again.</p>
         <p>This is a <a href="https://hexo.io">Hexo</a> powered portfolio and blog, its pages have been generated into static content that can be served on Github. I built this fugly theme all by myself.</p>
     </div>
