--- a/themes/darzouras/source/css/style.styl
+++ b/themes/darzouras/source/css/style.styl
@@ -29,6 +29,8 @@ body
   background: color-med
   font: font-size font-sans
   -webkit-text-size-adjust: 100%
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%230e2431' fill-opacity='0.6'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
 
 .outer
   clearfix()
@@ -52,6 +54,7 @@ body
   position: relative
   margin-top: 50px
   padding-bottom: 150px
+  
 
 @import "_extend"
 @import "_partial/header"
