chore: updated News page to include projects by year

--- a/themes/darzouras/source/css/_partial/header.styl
+++ b/themes/darzouras/source/css/_partial/header.styl
@@ -8,6 +8,12 @@
         font: 2em font-serif
         background: color-light
         padding: 0 5px
+    h3
+        font: 1.5em font-serif
+        padding: 10px 0 5px
+        border-bottom: 2px color-light solid
+    strong 
+        font-weight: bold
     p
         margin: 15px 0
     background: color-lightest
